# axon

./: .gitignore  Cargo.toml  Justfile  README.md  axon.service  config.example.toml  config.example.yaml  context7.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  examples.yml
examples/: README.md
examples/configs/: cert.pem  health_checks.toml  health_checks.yaml  host_based_routing.toml  hot_reload.toml  hot_reload.yaml  http3_proxy.toml  key.pem  load_balance_rr.toml  load_balance_rr.yaml  metrics.toml  metrics.yaml  path_rewrite.toml  path_rewrite.yaml  proxy_single.toml  proxy_single.yaml  proxy_single_rewrite.toml  rate_limit_header.toml  rate_limit_header.yaml  rate_limit_ip.toml  rate_limit_ip.yaml  redirect.toml  redirect.yaml  root_path_host_routing.toml  simple_host_example.toml  static_files.toml  static_files.yaml  waf.toml  ws_echo.toml
examples/scripts/: _lib.sh  health_checks.sh  host_based_routing.sh  hot_reload.sh  http3_proxy.sh  load_balance_rr.sh  metrics.sh  path_rewrite.sh  proxy_single.sh  proxy_single_rewrite.sh  rate_limit_header.sh  rate_limit_ip.sh  redirect.sh  root_path_host_routing.sh  run_all.sh  static_files.sh  test_waf_auto.sh  waf_test.sh  waf_test_manual.sh  ws_binary.sh  ws_close.sh  ws_echo.sh  ws_echo_backend.py  ws_large_payload.sh  ws_ping_pong.sh
examples/static/: index.html
src/: lib.rs  main.rs  metrics.rs  tracing_setup.rs
src/adapters/: file_system.rs  health_checker.rs  http3.rs  http_client.rs  http_handler.rs  middleware.rs  mod.rs
src/adapters/config_providers/: file.rs  http.rs
src/config/: loader.rs  mod.rs  models.rs  validation.rs
src/core/: backend.rs  gateway.rs  load_balancer.rs  mod.rs  rate_limiter.rs
src/core/waf/: body_inspector.rs  bot_detector.rs  command_injection.rs  engine.rs  ip_filter.rs  mod.rs  path_traversal.rs  sql_injection.rs  xss_detector.rs
src/ports/: config_provider.rs  file_system.rs  http_client.rs  http_server.rs  mod.rs
src/utils/: connection_tracker.rs  graceful_shutdown.rs  health_checker_utils.rs  mod.rs
tests/: host_based_routing.rs  http3_basic.rs  same_path_routing.rs
